# pydevutils

./: .gitignore  README.md  default.wpr  default.wpu  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
docs/: index.md
make-includes/: .python.mk.swp
pydevutils/: commands.py  gittools.py
src/pydevutils/: com.py  gittools.py  moduletools.py  wingdbstub.py
src/pydevutils/commands/: main.py
src/pydevutils/commands/subcommands/: codegen.py  gitcommands.py  registry.py
src/tests/: pydevutils_tests.py
tests/: pydevutils_tests.py
